--- a/app/elements/base/base-elements.html
+++ b/app/elements/base/base-elements.html
@@ -7,6 +7,7 @@
 <link rel="import" href="./firmware-deployment.html" />
 <link rel="import" href="./ptl-test.html" />
 <link rel="import" href="./print-report.html" />
+<link rel="import" href="./pdf-viewer.html" />
 <link rel="import" href="./system-user.html" />
 <link rel="import" href="./job-config-set.html" />
 <link rel="import" href="./ind-config-set.html" />
