chute별 실적 조회

--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -11,3 +11,4 @@
 <link rel="import" href="./das-job-batch.html" />
 <link rel="import" href="./das-preprocess.html" />
 <link rel="import" href="./sms-control.html" />
+<link rel="import" href="./sms-chute-result.html" />
