--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -13,3 +13,4 @@
 <link rel="import" href="./sms-control.html" />
 <link rel="import" href="./sms-chute-result.html" />
 <link rel="import" href="./sms-rtn-box-result.html" />
+<link rel="import" href="./sms-das-box-result.html" />
