반품 검수 실적 비교

--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -14,3 +14,4 @@
 <link rel="import" href="./sms-chute-result.html" />
 <link rel="import" href="./sms-rtn-box-result.html" />
 <link rel="import" href="./sms-das-box-result.html" />
+<link rel="import" href="./sms-rtn-insp-result.html" />
