--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -15,3 +15,4 @@
 <link rel="import" href="./sms-rtn-box-result.html" />
 <link rel="import" href="./sms-das-box-result.html" />
 <link rel="import" href="./sms-rtn-insp-result.html" />
+<link rel="import" href="./sms-dps-box-result.html" />
