DAS배치 수동완료

--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -9,6 +9,7 @@
 <link rel="import" href="./invoice-no.html" />
 <link rel="import" href="./job-batch.html" />
 <link rel="import" href="./das-job-batch.html" />
+<link rel="import" href="./das-job-batch-close.html" />
 <link rel="import" href="./das-preprocess.html" />
 <link rel="import" href="./sms-control.html" />
 <link rel="import" href="./sms-chute-result.html" />
