--- a/app/elements/things-app/things-elements.html
+++ b/app/elements/things-app/things-elements.html
@@ -59,3 +59,5 @@
 <link rel="import" href="../things-content/chartjs-lib.html">
 <link rel="import" href="../things-content/things-chart-content.html">
 <link rel="import" href="../things-content/things-grid-chart-content.html">
+<link rel="import" href="../things-content/things-resource-custom-content.html">
+<link rel="import" href="../things-content/things-plain-custom-content.html">
