SDAS, SRTN Summary 조회

--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -17,3 +17,4 @@
 <link rel="import" href="./sms-das-box-result.html" />
 <link rel="import" href="./sms-rtn-insp-result.html" />
 <link rel="import" href="./sms-dps-box-result.html" />
+<link rel="import" href="./sms-rtn-summary.html" />
