--- a/app/elements/logis/sms-chute-result.html
+++ b/app/elements/logis/sms-chute-result.html
@@ -34,7 +34,7 @@ Copyright © HatioLab Inc. All rights reserved.
       page="{{page}}" limit="{{limit}}" last-response="{{lastResponse}}">
     </things-search-form>
 
-    <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[gridColumns]]"
+    <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[summaryGridColumns]]"
       buttons="[[buttons]]" paginatable=[[menuInfo.pagination]] show-paginator=[[menuInfo.pagination]]
       current-page="{{page}}" limit="{{limit}}" data="[[items]]" total-count="[[itemCount]]"
       fixed-column-count="[[menuInfo.fixed_columns]]" grid-save-action="[[menuInfo.grid_save_url]]">
@@ -58,6 +58,27 @@ Copyright © HatioLab Inc. All rights reserved.
             ];
           }
         },
+
+        /**
+         * 그리드 설정
+         *******
+         * @type {Object}
+         */
+        gridConfig: {
+          type: Object,
+          value: function () {
+
+          }
+        },
+
+        /**
+         * @description 그리드 컬럼
+         ****************
+         * @type {Object}
+         */
+        gridColumns: {
+          observer: '_gridColumnsChanged'
+        }
       },
 
       listeners: {
@@ -125,6 +146,47 @@ Copyright © HatioLab Inc. All rights reserved.
             element.initialParams = 'equip_type=SORTER';
           }
         });
+      },
+
+      /**
+       * @description 그리드 컬럼 변경 시...
+       **************
+       * @param {Object} gridColumns
+       */
+      _gridColumnsChanged: function (gridColumns) {
+        // 그리드 설정을 footer 포함하도록 수정
+        this.gridConfig = {
+          options: {
+            checkBar: {
+              exclusive: true
+            },
+            footer: {
+              visible: true,
+              summary: {
+                styles: {
+                  background: "#60cccc99"
+                }
+              }
+            }
+          }
+        };
+
+        // 컬럼명이 _qty, _pcs인 경우 그리드 footer에 합계 표시
+        gridColumns.forEach(function (column) {
+          if (column.name.indexOf('_qty') > 0 || column.name.indexOf('_pcs') > 0) {
+            column.footer = {
+              expression: 'sum',
+              text: 0,
+              styles: {
+                background: '#60cccc99',
+                prefix: Things.DataGlobal.t('label.total') + ': ',
+                numberFormat: '#,###'
+              }
+            }
+          }
+        });
+
+        this.summaryGridColumns = gridColumns;
       }
 
     });
