--- a/app/elements/logis/job-batch.html
+++ b/app/elements/logis/job-batch.html
@@ -411,14 +411,14 @@ Copyright © HatioLab Inc. All rights reserved.
         var needField = '';
 
         //Stage 코드 선택 체크
-        /*if (stageCd == '' || stageCd == '_na_') {
+        if (stageCd == '' || stageCd == '_na_') {
           this.openInfoMsg({
             type: 'info',
             title: 'Stage 설정하세요.',
             closeOnConfirm: true
           });
           return;
-        }*/
+        }
 
         var searchFormData = this.$['search-form'].serializeMyForm();
         var jobType = searchFormData.job_type;
