--- a/app/elements/logis/logis-elements.html
+++ b/app/elements/logis/logis-elements.html
@@ -18,3 +18,4 @@
 <link rel="import" href="./sms-rtn-insp-result.html" />
 <link rel="import" href="./sms-dps-box-result.html" />
 <link rel="import" href="./sms-rtn-summary.html" />
+<link rel="import" href="./sms-pas-das-result.html" />
