--- a/app/elements/logis/sms-pas-das-result.html
+++ b/app/elements/logis/sms-pas-das-result.html
@@ -34,7 +34,7 @@ Copyright © HatioLab Inc. All rights reserved.
       page="{{page}}" limit="{{limit}}" last-response="{{lastResponse}}">
     </things-search-form>
 
-    <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[summaryGridColumns]]"
+    <things-resource-grid id="grid" config="[[gridConfig]]" model="[[gridModel]]" columns="[[gridColumns]]"
       buttons="[[buttons]]" paginatable=[[menuInfo.pagination]] show-paginator=[[menuInfo.pagination]]
       current-page="{{page}}" limit="{{limit}}" data="[[items]]" total-count="[[itemCount]]"
       fixed-column-count="[[menuInfo.fixed_columns]]" grid-save-action="[[menuInfo.grid_save_url]]">
